k8s/comments-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
      name: comments-srv
