k8s/moderation-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: NodePort
  selector:
    app: moderation
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
      name: moderation-srv
