k8s/query-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: NodePort
  selector:
    app: query
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 80
